--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "hubot-scripts": ">= 2.5.0 < 3.0.0",
     "q": "~0.9.6",
     "underscore": "~1.5.1",
-    "hubot-hipchat": "~2.5.1-4"
+    #"hubot-hipchat": "~2.5.1-4"
+    "hubot-gtalk": ">= 0.0.1"
   },
   "engines": {
     "node": ">= 0.8.x",
